# thothctl

./: .gitignore  .readthedocs.yaml  AWS_PRICING_API_FINAL_REPORT.md  AWS_PRICING_API_IMPLEMENTATION_PLAN.md  AWS_PRICING_REFACTOR_REPORT.md  Dockerfile  LICENSE  README.md  TECHNICAL_DEBT_METRICS.md  mkdocs.yaml  pyproject.toml  tox.ini
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/workflows/: docs.yml  python-publish.yml  release.yml
docs/: iac_devsecops_use_case.md  index.md  mcp.md  navigation.md  quick_start.md  requirements.txt  telemetry.md  toolkit_overview.md  windows_installation.md  windows_troubleshooting.md
docs/catalog/: catalog-info.yaml
docs/dashboard/: README.md
docs/framework/: concepts.md  cross_platform_support.md  framework_architecture.md  infrasctructure_composition.md  policy_as_code.md  policy_as_code_spec.md  roadmap_fdi.md  software_architecture.md  space_configuration.md  thoth_framework.md
docs/framework/specs/: phase1_intent_to_iac.md
docs/framework/use_cases/: README.md  ai_dlc.md  check_command.md  devsecops_quickstart.md  devsecops_sdlc.md  generate_stacks.md  (+3 more)
docs/includes/: abbreviations.md
docs/installation/: devcontainer_setup.md  linux_installation.md  windows_installation.md
docs/javascripts/: tablesort.js
docs/stylesheets/: extra-enhanced.css  extra.css
docs/template_engine/: cli_commands_audit.md  for_developers.md  for_platform_engineers.md  github_templates.md  template_engine.md
docs/troubleshooting/: linux_troubleshooting.md  macos_troubleshooting.md  troubleshooting.md
scripts/: run_mcp_server.sh
src/: thothctl.py  version.py  wellcome_banner.py
src/check_environment/: check_environment.py  install_tools.py  tools.json
src/cleanup_project/: clean_project.py
src/common/: .iacpb_home.toml  .iacpb_module.toml  .iacpb_project.toml  common.py
src/config/: configs.py
src/create_inventory/: get_public_versions.py
src/create_template/: config.yaml  create_code.py  create_component.py  create_template.py  files_content.py  project_templates.py
src/process_terraform/: graph_terragrunt_dependencies.py
src/scan_and_compliance/: compliance_review.py
src/sync_workspaces/: sync_terraform_workspaces.py
src/thothctl/: __init__.py  autocomplete.py  cli.py  version.py  wellcome_banner.py
test/unit/: check_environment_test.py
tests/: conftest.py  test_agentcore_entrypoint.py  test_ai_apply_fix.py  test_ai_decision_engine.py  test_ai_fix_patterns.py  test_ai_memory.py  test_ai_orchestrator.py  test_ai_pr_decision.py  test_ai_safety_guard.py  test_aws_pricing_client.py  test_azure_devops_pr_comments.py  test_bedrock_pricing.py  test_cdk_language_selection.py  test_cfn_blast_radius.py  test_cfn_drift_detection.py  test_context_steering.py  test_cost_analyzer.py  test_cost_models.py  test_cost_policy_enforcement.py  test_cost_pr_comments.py  test_dashboard_loading_fix.py  test_dashboard_service.py  test_drift.py  test_drift_detection.py  test_ec2_pricing.py  test_github_pr_comments.py  test_iac_cost_integration.py  test_init_ai_tools.py  test_init_template_params.py  test_inventory_pr_comments.py  test_kics_scanner.py  test_mermaid_edge_labels.py  test_new_cost_providers.py  test_opa_data_files.py  test_parallel_scan.py  test_platform_utils.py  test_pr_comment_publisher.py  test_provider_source_url_fix.py  test_provider_versions.py  test_scan_cfn_support.py  (+8 more)
tests/terragrunt_test/: terragrunt.hcl
(+378 files in other folders)
